# aws-tagging-utils

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  aws_setup.md  mcp-server.md  mcp_server.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
scratch/: test_multi_region.py
src/: __init__.py  clients.py  config.py  logging_config.py  tag_on_create.py  tag_read.py  tag_report.py  tag_sync.py  tag_write.py  tag_writer.py
tests/: test_config.py  test_tag_on_create.py  test_tag_read.py  test_tag_writer.py
web/: app.py
web/templates/: index.html
