[project]
name = "aws-tagging-utils"
version = "0.2.0"
description = "AWS Tagging Utilities — MCP Server, Lambda handlers, and CLI for tag governance"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    "flask>=3.0.0",
    "mcp>=0.1.0",
    "fastmcp>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "moto[all]>=5.0",
    "ruff>=0.8.0",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "boto3-stubs[resourcegroupstaggingapi,ec2,s3,cloudtrail,sts]",
]

[project.scripts]
mcp_server = "mcp_server:main"

[tool.setuptools]
py-modules = ["mcp_server"]
packages = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]
ignore = [
    "E501",  # line length (handled by formatter)
    "B008",  # function call in default argument
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
